--- a/Module3-solution/css/css.css
+++ b/Module3-solution/css/css.css
@@ -41,9 +41,7 @@ body {
 #nav-list a {
   color: #fff;
   font-weight: bold;
-}
-
-#nav-list a br {
+  text-align: center;
   vertical-align: middle;
 }
 
@@ -52,11 +50,11 @@ body {
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #fff;
+  border: 1px solid #e3fff5;
 }
 .navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -30px;
+  float: right;
+  
 }
 
 h1 {
@@ -72,3 +70,4 @@ h1 {
 section {
   color: #5a0021;
 }
+
